--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=52c2eff853036d56af4489372a3792d3
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ##
-MAILER_DSN=""
+MAILER_DSN=gmail://isamm@gmail.com:password@localhost
 
 ###< symfony/mailer ###
 
@@ -38,5 +38,5 @@ MAILER_DSN=""
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=""
+MAILER_URL=gmail://isamm@gmail.com:password@localhost
 ###< symfony/swiftmailer-bundle ###
